--- a/client/src/App/App.css
+++ b/client/src/App/App.css
@@ -3,6 +3,9 @@
 *::after {
   box-sizing: border-box;
 }
+#root {
+  height: 100%;
+}
 
 body {
   background-color: #f1f1f1;
@@ -10,9 +13,14 @@ body {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.6);
   line-height: 1.3;
+  min-height: 100vh;
 }
 
 a {
     color: inherit;
     text-decoration: none;
+}
+
+.App {
+  min-height: 100vh;
 }
