--- a/client/src/App/Login/styles.css
+++ b/client/src/App/Login/styles.css
@@ -1,7 +1,7 @@
 .blocpage-login {
     border-radius: 10px;
     background-color: white;
-    width: 70%;
+    width: 85%;
     display: flex;
     flex-direction: column;
     margin: 10px auto;
@@ -12,19 +12,18 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 10px;
+    padding: 8px;
   }
 
   .page-login input {
-    height: 40px;
-    width: 250px;
-    margin: 5px 0;
+    height: 30px;
+    /* width: 300px; */
+    /* margin: 5px 0; */
   }
 
   .page-login .div-button {
     display: flex;
     justify-content: center;
-
   }
 
   .page-login .input-btn {
@@ -38,14 +37,11 @@
 
 
 @media only screen and (min-width: 950px) {
-    .page-login input {
-     height: 40px;
-     width: 300px;
-     margin: 5px 0;
-    }
+
     .blocpage-login {
         flex-direction: row;
         justify-content: space-between;
+        width: 70%;
     }
 
     .page-login {
