--- a/client/src/App/Signup/styles.css
+++ b/client/src/App/Signup/styles.css
@@ -4,10 +4,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    /* border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px; */
     justify-content: space-between;
-    padding-bottom: 10px;
+    padding: 10px;
 
   }
 
