--- a/client/src/App/App.css
+++ b/client/src/App/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: #f1f1f1;
+
   font-family: Roboto, sans-serif;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.6);
@@ -23,4 +23,5 @@ a {
 
 .App {
   min-height: 100vh;
+  /* background-color: #f1f1f1; */
 }
